--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 axum = "0.8.1"
+dotenv = "0.15.0"
 hyper = { version = "1.6.0", features = ["full"] }
+postgres = "0.19.10"
 tokio = { version = "1.32.0", features = ["full"] }
 tower = "0.5.2"
