--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ hyper = { version = "1.6.0", features = ["full"] }
 postgres = "0.19.10"
 tokio = { version = "1.32.0", features = ["full"] }
 tower = "0.5.2"
+diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
+r2d2 = "0.8"
+thiserror = "1.0"
