--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ hyper = { version = "0.14", features = ["full", "server"] }
 async-trait = "0.1"
 postgres = "0.19.10"
 tokio = { version = "1.32.0", features = ["full"] }
-tower-http = { version = "0.5", features = ["auth"] }
+tower-http = { version = "0.5", features = ["auth", "cors"] }
 diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
 r2d2 = "0.8"
 thiserror = "1.0"
@@ -19,3 +19,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 tokio-postgres = "0.7"
+validator = { version = "0.14", features = ["derive"] }
+regex = "1.11.1"
+http = "1.3.1"
+tracing-subscriber = "0.3.19"
