--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ validator = { version = "0.14", features = ["derive"] }
 regex = "1.11.1"
 http = "1.3.1"
 tracing-subscriber = "0.3.19"
+html-escape = "0.2"
