--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2021"
 [dependencies]
 axum = {version = "0.8.1", features = ["macros"]}
 dotenv = "0.15.0"
-hyper = { version = "0.14", features = ["full", "server"] }
 async-trait = "0.1"
 postgres = "0.19.10"
 tokio = { version = "1.32.0", features = ["full"] }
@@ -24,3 +23,5 @@ regex = "1.11.1"
 http = "1.3.1"
 tracing-subscriber = "0.3.19"
 html-escape = "0.2"
+tower = { version = "0.4", features = ["util"] }
+hyper = { version = "0.14", features = ["full"] }
