--- a/.gitlab-ci/variables.yml
+++ b/.gitlab-ci/variables.yml
@@ -18,5 +18,5 @@ variables:
   PODS_TEST: tests
   PODS_TESTNUM: 12312312
   PODS_TESTEQ: 123123=12312312
-  PODS_FE_URL: "*"
+  PODS_FE_URL: "https://kelompok-3-suarakan-fe.pkpl.cs.ui.ac.id"
 
