--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,4 @@ tracing-subscriber = "0.3.19"
 html-escape = "0.2"
 tower = { version = "0.4", features = ["util"] }
 hyper = { version = "0.14", features = ["full"] }
+diesel_migrations = "2.0"
